# Chatbot

./: README.md
uv/: pyproject.toml
uv/src/prototype1_CLI/: agent.py  server.py
uv/src/prototype2_WebIntegration/: agent.py  server.py
