[project]
name = "uv-agent-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.2",
    "logfire>=4.2.0",
    "mcp>=1.12.4",
    "mcp-server-fetch>=2025.1.17",
    "psutil>=7.0.0",
    "pydantic-ai>=0.6.2",
    "starlette>=0.47.2",
    "streamlit>=1.48.0",
    "uvicorn>=0.35.0",
]
